syntax = "proto3";

package pb;

option go_package = "./pb;pb";

message Video {
    string ID = 1;
    string Title = 2;
    string Author = 3;
    string Duration = 4;
}

message Playlist {
    string ID = 1;
    string Title = 2;
    string Author = 3;
    repeated Video Videos = 4;
}

service YoutubeGRPCService {
    rpc VideoGetMeta (VideoGetReq) returns (Video);
    rpc VideoGetStream (VideoGetReq) returns (stream VideoStreamResp);
    rpc PlaylistGetMeta (PlaylistGetReq) returns (Playlist);
}

message VideoGetReq {
    string videoId = 1;
}

message VideoStreamResp{
    bytes data = 1;
    int64 ready = 2;
    int64 total = 3;
}

message PlaylistGetReq {
    string playlistId = 1;
}
